Version 2.1.3 - The "???" version
----------
2006-??-??

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

--------------------------------------------------------------------------------

Version 2.1.2 - The "We're on fire!" version
----------
2006-05-28

	GonoszTopi:
		* Fixed some warning messages.
		* Fixed windows compilation.
		* Fixed compilation in release mode.

	Kry:
		* Fixed initialization of Partfile, Server and Knownfile objects 
		  on remote GUI. 
		  This fixes a good bunch of bugs, including but not limited to: 
			* 0000741: the total speed possible is incorrect.
			* 0000774: Amulegui show comments ->segmentation fault.
			* 0000605: Incorrect ICH statistics data
			* 0000812: amulegui: wrong ed2k ports in server list
			* 0000776: amulegui segfaults
		* Fixed potentionally huge memory leak on EC. This is the main focus 
		  of this release, but that didn't stop us from adding more stuff ;)
		* Fixed "0000809: Amulegui: Changing toolbar orientation shows the 
		  Import button."
		* Reworked core/GUI comment handling to allow for future display of 
		  comments on remote GUI, and meanwhile, added an nice message to 
		  notify it's disabled.
		* Fixed "0000738: Set search type to KAD if only KAD is selected as 
		  usable networks in settings"
		* Fixed amule.conf not being saves on remote preferences change.
		* Fixed ping time on servers, down to msecs resolution now.

	lfroen:
		* Prevent bad_alloc thrown on invalid connection attempts on EC.
		* Adding support for 64-bit filesize to webserver and php

	lionel77:
		* Display "Share Ratio" in shared files list.

	Phoenix:
		* Compilation fix for auto_ptr<> on Mac.
		* Fixed crash on amulegui when exiting.
		* Fix for CheckDirExists() for empty directory string.
		* Slightly more informational error message in amuleweb when
		  the template is not found.
		* Fix for bug in ReadyPath() function.
		* Create a backup of the log file upon init.